<resources>
    <string name="app_name">FancyMansion</string>
    <string name="app_ad_id" translatable="false">ca-app-pub-1173724039182059~5762941845</string>
    <string name="banner_id" translatable="false">ca-app-pub-1173724039182059/6884451827</string>
    <string name="banner_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="google_login">Google Login</string>
    <string name="menu_user_logout">Log out</string>
    <string name="book_default_title">New Book</string>
    <string name="toolbar_title_create">New CreateBook</string>
    <string name="toolbar_title_update">Edit Book</string>
    <string name="toolbar_edit_slide">Edit Slide</string>
    <string name="toolbar_edit_choice">Edit Choice</string>
    <string name="toolbar_add_choice">Add Choice</string>
    <string name="toolbar_edit_enter">Edit Entry Route</string>
    <string name="toolbar_add_enter">Add Entry Route</string>
    <string name="toolbar_edit_condition">Edit Condition</string>
    <string name="toolbar_add_condition">Add Condition</string>
    <string name="nav_select_slide">Select Slide</string>
    <string name="menu_slide_add">Slide Add</string>
    <string name="menu_slide_copy">Slide Copy</string>
    <string name="menu_slide_delete">Slide Delete</string>
    <string name="menu_slide_play">Slide Play</string>
    <string name="menu_slide_save">Slide Save</string>
    <string name="menu_common_delete">Delete</string>
    <string name="menu_common_copy">Copy</string>
    <string name="menu_book_play">Play Book</string>
    <string name="menu_book_save">Save Book</string>
    <string name="menu_book_delete">Delete Book</string>
    <string name="menu_book_upload">Upload Book</string>
    <string name="menu_book_update">Update Book</string>
    <string name="menu_book_copy">Copy Book</string>
    <string name="menu_remove_store">Remove from store</string>
    <string name="menu_download">Download</string>
    <string name="menu_report_book">Report</string>
    <string name="menu_guide">Guide</string>
    <string name="menu_main_make">make book</string>
    <string name="menu_main_book">my book</string>
    <string name="menu_main_store">book store</string>
    <string name="menu_main_user">my page</string>
    <string name="menu_auth_auth">auth</string>
    <string name="frag_main_make">Make Book</string>
    <string name="frag_main_book">My Book List</string>
    <string name="frag_main_store">Book Store</string>
    <string name="frag_main_user">My Page</string>
    <string name="frag_no_make_book">There is no book being created. \nShall we give it a try?</string>
    <string name="frag_no_my_book">Download the book from the bookstore!</string>
    <string name="frag_no_store_book">Could not find a book registered in the store!</string>
    <string name="frag_no_upload_book">No books have been uploaded yet!</string>
    <string name="frag_user_upload_list">Uploaded Book List</string>
    <string name="no_have_choice">There are no choice items.</string>
    <string name="no_have_enter">There are no enter items.</string>
    <string name="no_have_condition">There are no conditions.</string>
    <string name="fab_add">ADD</string>
    <string name="start_book">START</string>
    <string name="create_book">CREATE</string>
    <string name="edit_book">EDIT</string>
    <string name="save_slide">SAVE</string>
    <string name="enter_slide">ENTER</string>
    <string name="update_common">UPDATE</string>
    <string name="add_common">ADD</string>
    <string name="drawer_opened" translatable="false">open</string>
    <string name="drawer_closed" translatable="false">close</string>
    <string name="save_dialog_title">Save Edits</string>
    <string name="save_dialog_question">Save your edits?</string>
    <string name="save_dialog_config_question">Save your edits?</string>
    <string name="record_dialog_title">Load Record</string>
    <string name="record_dialog_question">Load your last book record?</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_no">NO</string>
    <string name="name_book_prefix">Book&#160;</string>
    <string name="name_slide_prefix">Slide&#160;</string>
    <string name="name_choice_prefix">Choice&#160;</string>
    <string name="text_question_default">What to do?</string>
    <string name="wait_make_object">Data Extract ... Please Wait ...</string>
    <string name="alert_default_title">ERROR</string>
    <string name="alert_default_message">A problem occurred while processing the data. Go to the previous screen.</string>
    <string name="alert_default_button">OK</string>
    <string name="alert_max_count">Can\'t create any more</string>
    <string name="alert_not_found_file">The file could not be found.</string>
    <string name="book_config_title">title :&#160;</string>
    <string name="book_config_description">description :&#160;</string>
    <string name="book_config_version">version :&#160;</string>
    <string name="book_config_question">question :&#160;</string>
    <string name="book_config_id">id :&#160;</string>
    <string name="book_config_date">date :&#160;</string>
    <string name="book_config_writer">writer :&#160;</string>
    <string name="book_config_illustrator">illustrator :&#160;</string>
    <string name="book_config_user">User :&#160;</string>
    <string name="book_config_email">Email :&#160;</string>
    <string name="book_config_pub">Publish code :&#160;</string>
    <string name="book_remove_my_book"><u>Remove from my book</u></string>
    <string name="book_store_download">Downloads</string>
    <string name="intro_id">id :&#160;</string>
    <string name="book_slide_title">title :&#160;</string>
    <string name="book_slide_description">description :&#160;</string>
    <string name="book_slide_question">question :&#160;</string>
    <string name="book_slide_choice">choice item :&#160;</string>
    <string name="book_slide_enter">entry route :&#160;</string>
    <string name="book_slide_type">type :&#160;</string>
    <string name="book_slide_empty_image">no image</string>
    <string name="slide_type_normal">Normal</string>
    <string name="slide_type_start">Start</string>
    <string name="slide_type_ending">Ending</string>
    <string name="book_edit_choice">ADD CHOICE</string>
    <string name="book_edit_enter">ADD ENTRY ROUTE</string>
    <string name="choice_edit_enter_condition">ADD CONDITION</string>
    <string name="choice_edit_show_condition">ADD CONDITION</string>
    <string name="choice_not_found_slide">NOT FOUND SLIDE</string>
    <string name="choice_show_condition">button show condition :&#160;</string>
    <string name="choice_enter_condition">enter condition :&#160;</string>
    <string name="choice_enter_slide">select enter slide</string>
    <string name="choice_undefined">Undefined</string>
    <string name="choice_only_slide_enter">Only Slide Enter</string>
    <string name="select_slide">select slide :&#160;</string>
    <string name="select_choice">select choice :&#160;</string>
    <string name="cond_condition_1">select base entry</string>
    <string name="cond_operator">operator :&#160;</string>
    <string name="cond_condition_2">select comparison entry</string>
    <string name="cond_next">next relation :&#160;</string>
    <string name="cond_count">count</string>
    <string name="cond_slide">· slide :&#160;</string>
    <string name="cond_choice">· choice :&#160;</string>
    <string name="cond_text_entries">entries</string>
    <string name="cond_text_entries_to">entries</string>
    <string name="cond_text_count">count</string>
    <string name="cond_option_count">Count</string>
    <string name="cond_option_id">Comparison</string>
    <string name="cond_text">Cond :&#160;</string>
    <string name="title_endwith_copy">(copy)</string>
    <string name="toast_query_success">Book update success</string>
    <string name="toast_db_fail">Book update failed</string>
    <string name="toast_storage_fail">Book update failed</string>
    <string name="toast_download_success">Book download success</string>
    <string name="toast_download_fail">Book download failed</string>
    <string name="display_downloads">Downloads :&#160;</string>
    <string name="display_comment_add">add</string>
    <string name="display_comment_edit_title">Edit Comment</string>
    <string name="display_comment_edit">Edit</string>
    <string name="display_comment_delete">Delete</string>
    <string name="display_comment_update_success">Comment update success</string>
    <string name="display_comment_update_fail">Comment update fail</string>
    <string name="display_comment_order_oldest">order of registration</string>
    <string name="display_comment_order_recent">order of recent</string>
    <string name="display_comment_report">Report</string>
    <string name="display_comment_input_comment">Input Comment.</string>
    <string name="display_good">Good :&#160;</string>
    <string name="display_no_comment">No comments yet!</string>
    <string name="display_comment_is_edit">(edit)</string>
    <string name="count_enter">Enter count :&#160;</string>
    <string name="count_condition">Condition count :&#160;</string>
    <string name="item_enter_slide_id">Slide id to be entered :&#160;</string>
    <string name="item_enter_to_enter">&#160;enter</string>
    <string name="loading_text_login">Login …</string>
    <string name="loading_text_load_store_book">Loading book information from the store</string>
    <string name="loading_text_remove_store_book">Removing book from store</string>
    <string name="loading_text_download_store_book">The book is being downloaded from the store</string>
    <string name="loading_text_get_info_choice">Getting choice information</string>
    <string name="loading_text_get_info_condition">Getting condition information</string>
    <string name="loading_text_get_info_enter">Getting entry route information</string>
    <string name="loading_text_get_info_slide">Getting slide information</string>
    <string name="loading_text_save_slide">Slide is being saved</string>
    <string name="loading_text_new_slide">New slide being created</string>
    <string name="loading_text_delete_slide">Deleting slide</string>
    <string name="loading_text_frag_store_book">Loading book list from bookstore</string>
    <string name="loading_text_frag_my_book">Loading my book list from library</string>
    <string name="loading_text_frag_make_book">Loading list of books being written</string>
    <string name="loading_text_get_read_book">Getting information about the book want to read</string>
    <string name="loading_text_get_read_slide">Loading next book page</string>
    <string name="loading_text_get_make_book">Getting information about the book written</string>
    <string name="loading_text_delete_read_book">Discarding the book from the library</string>
    <string name="loading_text_delete_make_book">Discarding the book you are writing</string>
    <string name="loading_text_save_make_book">Saving book information being written</string>
    <string name="loading_text_upload_make_book">Book is being uploaded to the store</string>
    <string name="loading_text_copy_make_book">The book is being copied.</string>
    <string name="loading_text_download_estimate_file_size">Estimating file size to download</string>
    <string name="loading_text_download_file_percent">Downloading file :&#160;</string>
    <string name="loading_text_upload_file_percent">Uploading file :&#160;</string>
    <string name="dialog_time_limit_title">Time Limit</string>
    <string name="dialog_time_limit_book">You can upload a new book after 10 minutes of uploading a book. \n%d minutes left!</string>
    <string name="dialog_time_limit_comment">You can add a comment 10 seconds after you post it. \n%d seconds left!</string>
    <string name="report_question">Are you sure you want to report?</string>
    <string name="report_title">Report</string>
</resources>