<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_play"
        android:icon="@drawable/ic_play"
        android:title="@string/menu_book_play"
        app:showAsAction="always"/>

    <item
        app:showAsAction="always"
        android:title="more"
        android:icon="@drawable/ic_more_vertical"
        android:orderInCategory="1">

        <menu>
            <item
                android:id="@+id/menu_save"
                android:icon="@drawable/ic_save"
                android:title="@string/menu_book_save"
                android:orderInCategory="1"/>

            <item
                android:id="@+id/menu_delete"
                android:icon="@drawable/ic_remove"
                android:title="@string/menu_book_delete"
                android:orderInCategory="1"/>

            <item
                android:id="@+id/menu_upload"
                android:icon="@drawable/ic_upload"
                android:title="@string/menu_book_upload"
                android:orderInCategory="1"/>

            <item
                android:id="@+id/menu_copy"
                android:icon="@drawable/ic_copy"
                android:title="@string/menu_book_copy"
                android:orderInCategory="1"/>
        </menu>

    </item>
</menu>