<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditStartActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/layoutLoading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        layout="@layout/layout_loading"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView
            android:id="@+id/scrollSlideContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_slide_detail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layoutTail">

            <LinearLayout
                android:id="@+id/layoutSlideConfig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_left"
                android:layout_marginEnd="@dimen/margin_default_right"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical"
                android:clickable="true"
                android:focusableInTouchMode="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutSlideShow"
                    android:layout_width="match_parent"
                    android:layout_height="300dp">

                    <ImageView
                        android:id="@+id/imageSlideShowMain"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <ImageView
                        android:id="@+id/imageConfigAddImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_default"
                        android:layout_marginBottom="@dimen/margin_default"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/tvSlideConfigId"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/size_slide_config"
                        android:layout_weight="0.5"/>

                    <TextView
                        android:id="@+id/tvSlideConfigTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/size_slide_config"
                        android:layout_weight="0.5"
                        android:gravity="right"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_config_title"
                        android:textSize="@dimen/size_edit_book" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/BookInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.cheesejuice.fancymansion.view.RoundEditText
                            android:id="@+id/etConfigTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_config_version"
                        android:textSize="@dimen/size_edit_book"/>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/BookInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4">

                        <com.cheesejuice.fancymansion.view.RoundEditText
                            android:id="@+id/etConfigVersion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="7"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_config_writer"
                        android:textSize="@dimen/size_edit_book"/>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/BookInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.cheesejuice.fancymansion.view.RoundEditText
                            android:id="@+id/etConfigWriter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_config_illustrator"
                        android:textSize="@dimen/size_edit_book"/>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/BookInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.cheesejuice.fancymansion.view.RoundEditText
                            android:id="@+id/etConfigIllustrator"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_config_description"
                    android:textSize="@dimen/size_edit_book"
                    android:layout_marginTop="@dimen/margin_default"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/BookInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.cheesejuice.fancymansion.view.RoundEditText
                        android:id="@+id/etConfigDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minLines="3"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutTail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:enabled="false"
                android:id="@+id/btnEditBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_book"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>